<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BatterySaverPlus</string>
    <string name="app_system">Battery System Setting</string>
    <string name="app_charger">Battery Charger</string>
    <string name="app_details">Battery Details</string>
    <string name="app_task">Memory Boost</string>
    <string name="app_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="btnCheck">Check</string>
    <string name="btnBatteryUsageSummary">Battery Usage Summary</string>
    <string name="buildIgnoreList">Build Recommended Ignore List</string>
    <string name="btn_Clear">Clear All</string>
    <string name="SettingChangedMessage">Would you like to restart it to effect your change?</string>
    <string name="AutoKillFrequencyHelp">Choose frequency for Auto-Kill</string>
    <string name="AutoKillHelp">Choose level for Auto-Kill</string>
    <string name="LongPressActionHelp">Choose default action for Long Press</string>
    <string name="ClickActionHelp">Choose default action for Click</string>
    <string name="ClearIgnoreMessage">Ignore list is cleared</string>
    <string name="ClearIgnoreList">Clear Ignore List</string>
    <string name="IgnoreListHelp">Tap to remove the application from ignore list</string>
    <string name="IgnoreList">Ignore List</string>
    <string name="ckbAutoStart">Auto Start</string>
    <string name="ckbNotification">Notification bar icon</string>
    
    <string name="battery_count">Electricity statistics</string>
    <string name="title_count">Consumption statistics</string>
    <string name="setting">setting</string>
    <string name="eight_hour">Recently eight hours of electricity statistics</string>
    <string name="current">Current</string>
    <string name="hour">Hour</string>
	<string name="minute">Minute</string>
	<string name="battery_message">The percentage of electricity statistics</string>
    
    <string name="btn_task">KILL selected apps</string>
    <string name="btn_service">Services</string>
    <string name="btn_system">System</string>
    <string name="btnSetting">Setting</string>
    <string name="startup_setting_title">Startup</string>
    <string name="autostart_title">Auto Start</string>
    <string name="autostart_summary">Start up automatically when restart your phone</string>
    <string name="view_setting_title">View</string>
    <string name="shownotification_title">Show Notification</string>
    <string name="shownotification_summary">Show icon on notification bar to switch easily</string>
    <string name="itemheight_title">Set Item Height</string>
    <string name="itemheight_summary">Set height of running list item</string>
    <string name="is_button_at_top_title">Display buttons at top</string>
    <string name="is_button_at_top_summary">Check this to display buttons at top, otherwise display buttons at bottom. Need restart.</string>
    <string name="ignore_setting_title">Ignore List</string>
    <string name="ignorelist_title">Ignore List</string>
    <string name="ignorelist_summary">Maintain ignore list</string>
    <string name="clearignorelist_title">Clear Ignore List</string>
    <string name="clearignorelist_summary">Clear all your ignore items</string>
    <string name="action_setting_title">Action</string>
    <string name="clickaction_title">Default Click Action</string>
    <string name="clickaction_summary">Choose a default action for Click</string>
    <string name="longpressaction_title">Default Long Press Action</string>
    <string name="longpressaction_summary">Choose a default action for Long Press</string>
    <string name="autokill_setting_title">Auto Kill</string>
    <string name="autokilllevel_title">Auto Kill Level</string>
    <string name="autokilllevel_summary">Choose a default level for Auto Kill</string>
    <string name="autokillfrequency_title">Auto Kill Frequency</string>
    <string name="autokillfrequency_summary">If you choose When screen off, it need restart to apply the change.</string>
    <string name="security_title">Security</string>
    <string name="security_level_title">Security Level</string>
    <string name="security_level_summary">Set security level to low to show more apps, need restart</string>
    <string name="dialog_about_title">About</string>
    <string name="dialog_help_title">Help</string>
    <string name="ignore_service_title">Ignore service, front app</string>
    <string name="ignore_service_summary">Ignore service and front apps automatically. Otherwise they would display as green text, you can Long Press on them and Force Stop them.</string>
    <string name="ignore_service_alert_dialog_title">Important change</string>
    <string name="battery_info_title">Battery info</string>
    <string name="title_battery_history">Battery history</string>
    <string name="summary_battery_history">Summary of how battery has been used</string>
    <string name="title_battery_information">Battery information</string>
    <string name="summary_battery_information">Current battery status information</string>
    <string name="title_usage_statistics">Usage statistics</string>
    <string name="summary_usage_statistics">Summary of application usage</string>
    <string name="new_version_alter_title">Important Change</string>
    <string name="do_not_support">Your device does not support this feature</string>
    
    <string name="temperature">temperature</string>
    <string name="voltage">voltage</string>
    <string name="level">Level</string>
   
    <string name="batteryactivity">Battery Saving Mode</string>
    <string name="charger">Charger Information</string>
    <string name="datails">Battery Details</string>
    <string name="graph">Battery Graph</string>
    <string name="taskkiller">Task Killer</string>
</resources>
